# tw-ubi

./: LICENSE  README.md  SPECULATION_AND_BU.md  UE-complete.7z
backend/: Cargo.toml  README.md
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  constants.rs  events.rs  lib.rs  main.rs
backend/src/api/: admin.rs  balances.rs  conversion.rs  health.rs  mod.rs  oracle.rs  pending_conversions.rs  ubi.rs  users.rs
backend/src/models/: claim.rs  conversion.rs  mod.rs  oracle.rs  rate_index.rs  treasury.rs  user.rs
backend/src/services/: conversion.rs  mod.rs  oracle.rs  rate_index.rs  registry.rs  treasury.rs  ubi.rs
backend/src/utils/: auth.rs  epoch.rs  errors.rs  mfa.rs  mod.rs  wad.rs
frontend/: README.md
frontend/src/: App.css  App.tsx
frontend/src/components/: AdminDashboard.tsx  Dashboard.css  PendingConversions.tsx  UserDashboard.tsx
identity-adapters/: README.md  base.js  germany.js  mexico.js  package.json  spain.js  test.js  usa.js
